<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="menu_settings">Settings</string>
	<string name="menu_access_to">Access</string>
	<string name="menu_setting_label_accessurl">Redmine URL</string>
	<string name="menu_setting_edit_accessurl">http://www.redmine.org/redmine</string>
	<string name="menu_setting_accessurl_set_schema">The URL must start with http:// or https://</string>
	<string name="menu_setting_label_accesstoken">Access Token</string>
	<string name="menu_setting_edit_accesstoken">0e7c82.... 40 characters</string>
	<string name="menu_setting_label_authid">ID</string>
	<string name="menu_setting_edit_authid">Basic Authentication ID</string>
	<string name="menu_setting_label_authpasswd">Password</string>
	<string name="menu_setting_edit_authpasswd">Basic Authentication Password</string>
	<string name="name">Name</string>
	<string name="label_name">Label Name</string>
	<string name="save">Save</string>
	<string name="add">Add</string>
	<string name="menu_setting_check_auth">HTTP Basic Authentication</string>
	<string name="menu_setting_list_menu_title">%1$s :</string>
	<string name="comment">Comment</string>
	<string name="delete">Delete</string>
	<string name="menu_settings_loading">Retrieving item data.. </string>
	<string name="menu_settings_uploading">Posting item data.. </string>
	<string name="menu_confirm_delete_msg">Are you sure you want to delete this connection?</string>
	<string name="preference_category_issue">Issues</string>
	<string name="preference_issue_get_all">Get all issues</string>
	<string name="preference_issue_description_get_all">By default, fetch UNCLOSED issues from remote. If you wish to get all issues from remote, check this option.</string>
	<string name="preference_category_appearance">Appearance</string>
	<string name="preference_category_appearance_themes">Theme</string>
	<string name="menu_refresh">Refresh list</string>
	<string name="menu_setting_unsafe_title">Unsafe SSL site</string>
	<string name="menu_setting_unsafe_confimation">Connect to unsafe SSL site</string>
	<string name="menu_setting_permit_unsafe">Permit unsafe SSL connection</string>
	<string name="menu_setting_label_certkey">Certification key (Optional)</string>
	<string name="menu_setting_message_certkey">NOTE: If you input certification MD5 key, validate certification is same fingerprint.</string>
	<string name="remove_cache_all">Remove all cache</string>
	<string name="format_name">%1$s</string>
	<string name="format_date">%tF</string>
	<string name="format_datetime">%1$tF %1$tH:%1$tM</string>
	<string name="format_progress">%1$d%%</string>
	<string name="ticket_created">Created</string>
	<string name="ticket_created_by">by %1$s on %2$s</string>
	<string name="ticket_author">Author</string>
	<string name="ticket_title">Title</string>
	<string name="ticket_private">Private</string>
	<string name="ticket_tracker">Tracker</string>
	<string name="ticket_status">Status</string>
	<string name="ticket_priority">Priority</string>
	<string name="ticket_progress">Progress</string>
	<string name="ticket_category">Category</string>
	<string name="ticket_version">Version</string>
	<string name="ticket_assigned_to">Assigned to</string>
	<string name="ticket_assigned">Assigned</string>
	<string name="ticket_date">Date</string>
	<string name="ticket_date_start">Start date</string>
	<string name="ticket_date_due">Due date</string>
	<string name="ticket_date_arrow">▶</string>
	<string name="ticket_date_closed">Closed date</string>
	<string name="ticket_modified">Last modified</string>
	<string name="ticket_modified_by">%2$s</string>
	<string name="ticket_time">Time</string>
	<string name="ticket_time_estimate">%.2f</string>
	<string name="ticket_activity">Activity</string>
	<string name="ticket_issue">Issue</string>
	<string name="ticket_sort">Sort</string>
	<string name="ticket_other">Other</string>
	<string name="ticket_project">Project</string>
	<string name="ticket_description">Description</string>
	<string name="ticket_detail">Detail</string>
	<string name="ticket_relations">Relations</string>
	<string name="ticket_journals">Journals</string>
	<string name="ticket_attachments">Attachments</string>
	<string name="ticket_jump">Jump</string>
	<string name="ticket_watcher">Watchers</string>
	<string name="ticket_journal_id">#%1$d</string>
	<string name="ticket_filter_closed">Status filter</string>
	<string name="ticket_filter_closed_on">Filtered</string>
	<string name="ticket_filter_closed_off">Show all</string>
	<string name="ticket_closed">Closed</string>
	<string name="ticket_open">Open</string>
	<string name="issue_id_string">#%1s</string>
	<string name="issue_id">#%1$d</string>
	<string name="issue_id_subject">#%1$d %2$s</string>
	<string name="issue_id_tracker_subject">%3$s #%1$d %2$s</string>

	<string name="relation_none" />
	<string name="relation_relates">Relate</string>
	<string name="relation_duplicates">Duplicates</string>
	<string name="relation_duplicated">Duplicated</string>
	<string name="relation_blocks">Blocks</string>
	<string name="relation_blocked">Blocked</string>
	<string name="relation_precedes">%1$d days precedes</string>
	<string name="relation_follows">%1$d days follows</string>
	<string name="relation_copied_to">Copied</string>

	<string name="project_status_none" />
	<string name="project_status_active">Active</string>
	<string name="project_status_closed">Closed</string>
	<string name="project_status_archived">Archived</string>

	<string name="ascending">ascending</string>
	<string name="descending">descending</string>
	<string name="menu_setting_goto_redmine">Get token</string>
	<string name="menu_setting_message_accesstoken">NOTE: To get AccessToken, press \"Get token\" button.</string>
	<string name="menu_add_timeentry">Record Time</string>
	<string name="menu_filter">Filter</string>
	<string name="filter_none">None</string>
	<string name="edit">Edit</string>
	<string name="changes_from_to">Change <b>%1$s</b> from %2$s to %3$s</string>
	<string name="changes_set_to">Set <b>%1$s</b> to %3$s</string>
	<string name="changes_remove_from">Remove <s>%2$s</s> from <b>%1$s</b></string>
	<string name="remote_401">Authentication is required. Check your role or API key.</string>
	<string name="remote_403">Something wrong with connection settings.</string>
	<string name="remote_404">Something went wrong with connection. Try later.</string>
	<string name="remote_407">Proxy connection is not supported yet</string>
	<string name="remote_4xx">Something wrong with connection. Please check access by browser.</string>
	<string name="remote_5xx">Something wrong with server. Please check access by browser.</string>
	<string name="remote_600">A problem was occurred on this application</string>
	<string name="remote_saved">Has been saved to remote</string>
	<string name="has_been_saved">Has been saved</string>
	<string name="input_error_invalid_decimal">Input valid number.</string>
	<string name="input_error_select">Select %1$s</string>
	<string name="warning_experimental_feature">This is EXPERIMENTAL. This feature may affect bad to your redmine.</string>
	<string name="size">Size</string>
	<string name="progress">Progress</string>
	<string name="download">Download</string>
	<string name="download_with_manager">Download via Download Manager</string>
	<string name="download_cancelled">Download was cancelled. Try again.</string>
	<string name="wiki">Wiki</string>
	<string name="connection">Connection</string>
	<string name="favorite">Favorite</string>
	<string name="information">Information</string>
	<string name="homepage">Homepage</string>
	<string name="news">News</string>
	<string name="activity_not_found">The activity is not found for this file.</string>
	<string name="recent_issues">Recent issues</string>
	<string name="web">Web</string>
	<string name="contributors">Contributors</string>
	<string name="title_home">Home</string>
	<string name="title_category">Category %1$s</string>
	<string name="title_version">Version %1$s</string>
	<string name="text_type">Text format</string>
	<string name="text_type_textile">Textile</string>
	<string name="text_type_markdown">Markdown</string>
	<string name="text_type_none">None</string>
	<string name="privacy_policy">Privacy Policy</string>
	<string name="terms_and_conditions" />
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
