<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/preference_category_appearance">
        <ListPreference android:entries="@array/preference_appearance_themes_entries"
            android:entryValues="@array/preference_appearance_themes_values"
            android:title="@string/preference_category_appearance_themes"
            android:defaultValue="default"
            android:key="appearance_themes"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_issue">
        <CheckBoxPreference android:title="@string/preference_issue_get_all"
            android:summary="@string/preference_issue_description_get_all"
            android:key="issue_get_all"
            android:defaultValue="false"/>
    </PreferenceCategory>


</PreferenceScreen>